<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="52dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/passport_login_page_padding_top" />

            <ImageView
                android:id="@+id/mi_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/main_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/passport_mi_account_title"
                android:textColor="@color/passport_password_notice_title"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/login_id"
                style="@style/PassportEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/passport_main_title_content_margin"
                android:autofillHints="@null"
                android:hint="@string/hint_username"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                style="@style/PassportEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/passport_view_group_internal_margin_vertical"
                android:autofillHints="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <LinearLayout
                android:id="@+id/agreement_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/passport_view_group_internal_margin_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_agreement_tick"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/user_agreement_tick_bg"
                    android:contentDescription="@null"
                    app:tint="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/user_agreement_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_agreement_desc" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/Passport.HighlightRoundButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/passport_round_button_height"
                android:layout_marginTop="@dimen/passport_view_group_external_margin_vertical"
                android:text="@string/text_login_btn" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/passport_login_page_padding_top" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>